content/vault/v1.4.x/content/docs/commands/read.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: read - Command
sidebar_title: <code>read</code>
description: |-
  The "read" command reads data from Vault at the given path. This can be used
  to read secrets, generate dynamic credentials, get configuration details, and
  more.
---

# read

The `read` command reads data from Vault at the given path. This can be used to
read secrets, generate dynamic credentials, get configuration details, and more.

For a full list of examples and paths, please see the documentation that
corresponds to the secrets engine in use.

## Examples

Read a secret from the static secrets engine:

```text
$ vault read secret/my-secret
Key                 Value
---                 -----
refresh_interval    768h
foo                 bar
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Output Options

- `-field` `(string: "")` - Print only the field with the given name. Specifying
  this option will take precedence over other formatting directives. The result
  will not have a trailing newline making it ideal for piping to other processes.

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.
